...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <ImageView
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_user"
        android:contentDescription="@string/logout"
        android:padding="20dp"
        android:clickable="true"
...

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/line1"
        android:background="@color/dark_grey"
        app:layout_constraintBottom_toTopOf="@+id/search_add_container"
        app:layout_constraintTop_toBottomOf="@+id/app_header">
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginHorizontal="10dp"
...
                android:layout_marginStart="15dp"
                android:layout_marginTop="6dp"
                android:src="@drawable/search_icon"
                android:contentDescription="camera icon"
                android:clickable="true" />
            <EditText
                android:id="@+id/search_input"
                android:layout_width="0dp"
                android:paddingHorizontal="10dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:maxLines="1"
...
                android:hint="@string/search_hint"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:background="@android:color/transparent"/>
        </LinearLayout>
        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:text="@string/add_item"
            android:paddingVertical="7dp"
...
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1">
        </View>

        <ImageView
            android:id="@+id/filter_button"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:src="@drawable/filter_icon"
            app:tint="@color/black"
            android:clickable="true"
            android:contentDescription="filter icon" />
...
                        android:layout_height="18dp"
                        android:layout_marginStart="12dp"
                        android:src="@drawable/search_icon"
                        android:layout_gravity="center"
                        android:contentDescription="search icon" />
                    <EditText
                        android:id="@+id/keyword_field"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:autoSizeMinTextSize="8sp"
                        android:imeOptions="actionSearch"
                        android:inputType="text"
...
                        android:maxLines="1"
                        android:paddingTop="3dp"
                        android:paddingLeft="10dp"
                        android:textColor="@color/black"
                        android:text="All"/>
                    <Spinner
                        android:id="@+id/tag_filter_field"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:dropDownSelector="@drawable/spinner_bg"
                        android:popupBackground="@drawable/spinner_bg"
...

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/apply_filter_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:paddingVertical="7dp"
                    android:minWidth="0dp"
...
        app:layout_constraintTop_toBottomOf="@id/items_count_frame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/line2"/>

    <ListView
        android:id="@+id/item_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingBottom="60dp"
        app:layout_constraintBottom_toTopOf="@id/line2"
...
        app:layout_constraintStart_toStartOf="parent">
    </TextView>
    <LinearLayout
        android:id="@+id/action_panel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/delete_action_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
...
